<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">المحراب</string>
    <string name="error_player">(%1$s)خطأ في تشغيل الفيديو</string>
    <string name="stopathan">أوقف التنبيه</string>
    <string name="retry">حاول مرة أخرى</string>
    <string name="no_internet">تأكد من اتصالك بالانترنت</string>
    <string name="error">حدث خطأ,تأكد من اتصالك بالانترنت ثم حاول مرة أخرى</string>
    <string-array name="drawerItems">
        <item>أوقات الصلاة</item>
        <item>تذكير</item>
        <item>عرض الركعة</item>
        <item>أذكار</item>
    </string-array>
    <string name="sat">السبت</string>
    <string name="sun">الأحد</string>
    <string name="mon">الإثنين</string>
    <string name="tus">الثلاثاء</string>
    <string name="wes">الأربعاء</string>
    <string name="ths">الخميس</string>
    <string name="fri">الجمعة</string>
    <string name="notification_body">حان موعد آذان  %s </string>
    <string name="notification_body1">حان موعد   %s </string>
    <string name="am1"> محرم</string>
    <string name="am2"> صفر</string>
    <string name="am3"> ربيع الأول</string>
    <string name="am4"> ربيع الثاني</string>
    <string name="am5"> جمادى الأولى</string>
    <string name="am6"> جمادى الآخرة</string>
    <string name="am7"> رجب</string>
    <string name="am8"> شعبان</string>
    <string name="am9"> شعبان</string>
    <string name="am10"> شوال</string>
    <string name="am11"> ذو القعدة</string>
    <string name="am12"> ذو الحجة</string>
    <string name="em1">يناير</string>
    <string name="em2">فبراير</string>
    <string name="em3">مارس</string>
    <string name="em4">أبريل</string>
    <string name="em5">مايو</string>
    <string name="em6">يونيو</string>
    <string name="em7">يوليو</string>
    <string name="em8">أغسطس</string>
    <string name="em9">سبتمبر</string>
    <string name="em10">أكتوبر</string>
    <string name="em11">نوفمبر</string>
    <string name="em12">ديسمبر</string>
    <string name="mt">هـ</string>
    <string name="mt1">م</string>
    <string name="p1">صلاة الفجر</string>
    <string name="p2">صلاة الظهر</string>
    <string name="p6">صلاة الشروق</string>
    <string name="p3">صلاة العصر</string>
    <string name="p4">صلاة المغرب</string>
    <string name="p5">صلاة العشاء</string>
    <string name="isAthanTime" formatted="false">حان وقت رفع أذان %s</string>
    <string name="pn1">الفجر</string>
    <string name="pn2">الشروق</string>
    <string name="pn3">الظهر</string>
    <string name="pn4">العصر</string>
    <string name="pn5">المغرب</string>
    <string name="pn6">العشاء</string>
    <string name="pn7">الجمعة</string>
    <string name="pn8">صلاة الجمعة</string>
    <string name="t1">موعد الأذان</string>
    <string name="t2">موعد الإقامة</string>
    <string name="qn1"> إقامة صلاة الفجر</string>
    <string name="qn2"> إقامة صلاة الشروق</string>
    <string name="qn3"> إقامة صلاة الظهر</string>
    <string name="qn4"> إقامة صلاة العصر</string>
    <string name="qn5"> إقامة صلاة المغرب</string>
    <string name="qn6"> إقامة صلاة العشاء</string>
    <string name="pa">تنبيه الهاتف</string>
    <string name="pa1">تذكر إغلاق الهاتف</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="Arabic">العربية</string>
    <string name="English">الانجليزية</string>
    <string name="Swedish">السويدية</string>
    <string name="theme1">قالب 1</string>
    <string name="theme2">قالب 2</string>
    <string name="PM">م </string>
    <string name="AM">ص </string>
    <string name="h"> ساعة</string>
    <string name="m">دقيقة</string>
    <string name="s">ثانية</string>
    <string name="percent">نسبي</string>
    <string name="contstant">وقت ثابت</string>
    <string name="det_iqama"> تحديد الإقامة</string>
    <string name="settings">الإعدادات</string>
    <string name="eqama_settings">أوقات الإقامة</string>
    <string name="notification_settings">التنبيهات</string>
    <string name="hint_eqama">تحديد مدة الإقامة لكل صلاة</string>
    <string name="hint_notifTextPeriod">تحديد نص التنبيه ومدته</string>
    <string name="choose_theme">اختر قالب</string>
    <string name="hint_choose_theme">اختر قالب التصميم</string>
    <string name="language_settings"> اللغة</string>
    <string name="choose_language">اختر لغة العرض</string>
    <string name="choose_lang">اختر لغة:</string>
    <string name="alarm_interrupted">تم إيقاف الأذان</string>
    <string name="alarm_interrupted_body">تم إيقاف الأذان عن طريق تطبيق آخر أو إتصال</string>
    <string name="prayer_name_time">أذان %s</string>
    <string name="praytimes">أوقات الصلاة</string>
    <string name="stop">ايقاف</string>
    <string name="alarm_timed_out">%s يتوقف التنبيه بعد دقيقة</string>
    <string name="description">Media Controls</string>
    <string name="alarm_timed_out_only">يتوقف التنبيه بعد دقيقة</string>
    <string name="adv">شريط الأخبار</string>
    <string name="azkar"> الأذكار والأدعية</string>
    <string name="advertisement"> الإعلانات</string>
    <string name="ads"> إضافة إعلان</string>
    <string name="ads_edit"> تعديل إعلان</string>
    <string name="adv_settings">إضافة ,تعديل, حذف الأخبار</string>
    <string name="azkar_settings">إضافة ,تعديل, حذف الأذكار</string>
    <string name="NewAds_settings">إضافة إعلان يظهر في وقت محددة</string>
    <string name="location_settings">تغيير المدينة</string>
    <string name="Tones_settings">تغيير الأصوات</string>
    <string name="location_hints"> اختر مدينة </string>
    <string name="Tones_hints">تغيير أصوات تنبيهات الأذان والإقامة </string>
    <string name="search">بحث</string>
    <string name="save">حفظ</string>
    <string name="choose_audio_limit">يجب أن يكون طول المقطع الصوتي اقل او يساوي  60ثانية</string>
    <string name="wait">يرجى الانتظار...</string>
    <string name="saved">تم الحفظ بنجاح</string>
    <string name="set_iqama">تحديد مدة الإقامة لكل صلاة</string>
    <string name="igamaPeriod">زمن الإقامة (دقيقة)</string>
    <string name="igamaPeriod1">وقت الإقامة </string>
    <string name="azkarPeriod">ظهور الأذكار بعد الإقامة (دقيقة)</string>
    <string name="azkarAppearPeriod">فترة ظهور الأذكار (دقيقة)</string>
    <string name="arNotif">نص التنبيه باللغة العربية </string>
    <string name="enNotif">نص التنبيه باللغة الانجليزية </string>
    <string name="urNotif">نص التنبيه باللغة الأوردو </string>
    <string name="fajer_igama">صلاة الفجر </string>
    <string name="sh_igama">صلاة الشروق/الضحى </string>
    <string name="duhr_igama">صلاة الظهر </string>
    <string name="aser_igama">صلاة العصر </string>
    <string name="magrib_igama">صلاة المغرب </string>
    <string name="isha_igama">صلاة العشاء </string>
    <string name="isTime">الآن</string>
    <string name="isPrayTime">وقت الصلاة</string>
    <string name="isFriday">صلاة الجمعة</string>
    <string name="m_adv">إعلانات المسجد</string>
    <string name="m_adv_text1">نلبلا محي سيبمرس يس </string>
    <string name="m_adv_text2">اااا لللل بببب يييييي ففففف </string>
    <string name="m_adv_text">مسجد بلال بن رباح يهنئى الشبل محمد أحمد لحفظه القران
الكريـم ونسـأل الله الكريـم أن ينفـع بـه الإسـلام والمسلميــن</string>
    <string name="azkar_t">أَصْـبَحْنا وَأَصْـبَحَ المُـلْكُ لله وَالحَمدُ لله ، لا إلهَ إلاّ اللّهُ وَحدَهُ لا شَريكَ لهُ، لهُ المُـلكُ ولهُ الحَمْـد، وهُوَ على كلّ شَيءٍ قدير ، رَبِّ أسْـأَلُـكَ خَـيرَ ما في هـذا اليوم وَخَـيرَ ما بَعْـدَه ، وَأَعـوذُ بِكَ مِنْ شَـرِّ ما في هـذا اليوم وَشَرِّ ما بَعْـدَه، رَبِّ أَعـوذُبِكَ مِنَ الْكَسَـلِ وَسـوءِ الْكِـبَر ، رَبِّ أَعـوذُ بِكَ مِنْ عَـذابٍ في النّـارِ وَعَـذابٍ في القَـبْر.</string>
    <string name="cancel_delete">إلغاء</string>
    <string name="ok">موافق</string>
    <string name="confirm_logout">هل أنت متأكد أنك تريد تسجيل الخروج؟ </string>
    <string name="confirm_delete">حذف</string>
    <string name="tv_delTitle">حذف الخبر</string>
    <string name="tv_delMsg">هذه الفترة الوحيدة للاعلان سيتم حذف كل الاعلان, هل تريد الاستمرار؟</string>
    <string name="tv_delMsg1">هل أنت متأكد أنك تريد حذف هذه الفترة؟</string>
    <string name="tv_delAttention">هل أنت متأكد أنك تريد حذف هذا الخبر؟</string>
    <string name="tv_delAttention1">هل أنت متأكد أنك تريد حذف هذا الذكر؟</string>
    <string name="success_delete">تم الحذف بنجاح</string>
    <string name="add_azkar">إضافة أذكار جديدة</string>
    <string name="add_adv">إضافة خبر جديد</string>
    <string name="edit_adv">تعديل </string>
    <string name="deleting">جاري الحذف...</string>
    <string name="adding">جاري الإضافة...</string>
    <string name="add">إضافة</string>
    <string name="edit">تعديل</string>
    <string name="success_add">تم الإضافة بنجاح</string>
    <string name="success_edit">تم التعديل</string>
    <string name="text">أدخل نص الخبر</string>
    <string name="text_azkar">أدخل نص الذكر</string>
    <string name="end">أدخل تاريخ النهاية</string>
    <string name="start">أدخل تاريخ البداية</string>
    <string name="error_date">يجب أن يكون تاريخ النهاية أكبر من تاريخ البداية</string>
    <string name="error_time">يجب أن يكون وقت النهاية أكبر من تاريخ البداية</string>
    <string name="sort">أدخل الترتيب للخبر</string>
    <string name="count">أدخل عدد مرات التكرار </string>
    <string name="newstext"> نص الخبر</string>
    <string name="adsTitle">عنوان الإعلان</string>
    <string name="adsPeriod">فترة ظهور الإعلان</string>
    <string name="adsAppearance">عدد مرات ظهور الإعلان</string>
    <string name="adsDay">أيام ظهور الإعلان</string>
    <string name="adsTime">أوقات ظهور الإعلان</string>
    <string name="enter_adsTitle">أدخل عنوان الإعلان</string>
    <string name="adsText">نص الإعلان</string>
    <string name="fridayTxt"> خطبة الجمعة </string>
    <string name="fridayTxt1">مدة ظهور شاشة الخطيب (دقيقة)</string>
    <string name="fridayTxt2">مدة ظهور الخطبة المترجمة (دقيقة)</string>
    <string name="azkartext"> الأذكار </string>
    <string name="sleepTxt"> وضع الإسبات </string>
    <string name="sleepTxt1">تشغيل بعد العشاء بمدة(دقيقة)</string>
    <string name="sleepTxt2">إيقاف قبل الفجر بمدة(دقيقة)</string>
    <string name="aboutApp"> هو تطبيق يستخدم في المساجد لمساعدة المصلين وتنبيههم بمواعيد الصلاة. </string>
    <string name="corpyright">جميع الحقوق محفوظة© رقم الايداع المحلي3087</string>
    <string name="version">Version 1.0</string>
    <string name="website">www.enjaz-systems.com</string>
    <string name="developBy">تطوير شركة إنجاز لنظم التحكم</string>
    <string name="friday">ظهور شاشة الخطيب </string>
</resources>