<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:textDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/aboutApp"
            android:textColor="@color/backLogo"
            android:textSize="@dimen/no_font_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/developBy"
            android:textColor="@color/backLogo"
            android:textSize="@dimen/no_font_size" />

        <ImageView
            android:id="@+id/logoCo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/enjaz"
            android:visibility="visible" />

        <TextView
            android:id="@+id/developedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textColorLink="@color/nav_color_on"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/version"
            android:textColor="@color/backLogo"
            android:textSize="@dimen/small_font_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/corpyright"
            android:textColor="@color/backLogo"
            android:textSize="@dimen/small_font_size" />
    </LinearLayout>
</LinearLayout>
