<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="10dp"
    android:textDirection="rtl"
    android:layout_marginBottom="50dp">

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/azkartext"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/ed_newsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="top"
        android:hint="@string/text_azkar"
        android:padding="10dp"
        android:textColor="@color/black_light"
        android:textColorHint="@color/lb_grey"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/llFajer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/cb_fajer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical|right" />

        <TextView
            android:id="@+id/tv_fajer"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/pn1"
            android:textColor="@color/light_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDuhr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/cb_duhr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical|right" />

        <TextView
            android:id="@+id/tv_dhr"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/pn3"
            android:textColor="@color/light_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAsr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/cb_asr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical|right" />

        <TextView
            android:id="@+id/tv_asr"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/pn4"
            android:textColor="@color/light_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMagrib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/cb_magrib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical|right" />

        <TextView
            android:id="@+id/tv_magrib"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/pn5"
            android:textColor="@color/light_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIsha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/cb_isha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical|right" />

        <TextView
            android:id="@+id/tv_isha"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/pn6"
            android:textColor="@color/light_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_sort"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:padding="10dp"
            android:text="الترتيب"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/ed_sort"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:hint="الترتيب"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black_light"
            android:textColorHint="@color/lb_grey"
            android:textSize="16dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_count"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:padding="10dp"
            android:text="التكرار"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/ed_count"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:inputType="number"
            android:padding="10dp"
            android:text="1"
            android:textColor="@color/black_light"
            android:textColorHint="@color/lb_grey"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:background="@color/back_text"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:background="@color/back_text"
            android:text="@string/cancel_delete"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>
