<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:textDirection="rtl">

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/newstext"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/ed_newsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="top"
        android:hint="@string/text"
        android:padding="10dp"
        android:textColor="@color/black_light"
        android:textColorHint="@color/lb_grey"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="من بداية تاريخ"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/ed_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_date_range_black_24dp"
                android:textSize="@dimen/small_font_size"
                android:focusable="false"
                android:hint="تاريخ بداية"
                android:inputType="date"
                android:textColor="@color/black_light"
                android:textColorHint="@color/lb_grey" />
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="right|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="من نهاية تاريخ"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/ed_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_date_range_black_24dp"
                android:focusable="false"
                android:hint="تاريخ نهاية"
                android:inputType="date"
                android:textSize="@dimen/small_font_size"
                android:textColor="@color/black_light"
                android:textColorHint="@color/lb_grey" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_sort"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:padding="10dp"
            android:text="الترتيب"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:visibility="visible" />
        <EditText
            android:id="@+id/ed_sort"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:hint="الترتيب"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black_light"
            android:textColorHint="@color/lb_grey"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.5"
            android:background="@color/back_text"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="0.5"
            android:background="@color/back_text"
            android:text="@string/cancel_delete"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>
